--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,42 +9,12 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - SELENIDE_REMOTE=http://selenium-hub:4444/wd/hub
+      - SELENIDE_REMOTE=http://chrome:4444/wd/hub
     depends_on:
       - chrome
-      - firefox
-      - selenium-hub
 
   chrome:
-    image: selenium/node-chrome:4.1.3-20220405
+    image: selenium/standalone-chrome
     shm_size: 2gb
-    volumes:
-      - ./selenium_server_deploy.jar:/opt/selenium/selenium-server.jar
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-
-  firefox:
-    image: selenium/node-firefox:4.1.3-20220405
-    shm_size: 2gb
-    volumes:
-      - ./selenium_server_deploy.jar:/opt/selenium/selenium-server.jar
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-
-  selenium-hub:
-    image: selenium/hub:4.1.3-20220405
-    container_name: selenium-hub
-    volumes:
-      - ./selenium_server_deploy.jar:/opt/selenium/selenium-server.jar
     ports:
-      - "4442:4442"
-      - "4443:4443"
       - "4444:4444"
