--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,4 @@
-# To execute this docker-compose yml file use `docker-compose.yml -f docker-compose.yml-v3-dev.yml up`
-# Add the `-d` flag at the end for detached execution
-# To stop the execution, hit Ctrl+C, and then `docker-compose.yml -f docker-compose.yml-v3-dev.yml down`
+# To execute this docker-compose yml file use `docker-compose.yml -f docker-compose.up`
 version: "3"
 services:
   yandexsearch-tests:
